--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "16.8.4",
     "react-bootstrap": "^1.6.6",
     "react-dom": "16.8.4",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "2.1.3",
