--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "2.1.3",
     "truffle": "5.0.5",
+    "uuid": "^9.0.0",
     "web3": "^1.9.0"
   },
   "scripts": {
