--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 REACT_APP_IF_API_KEY=
 REACT_APP_IF_KEY_SECRET=
 REACT_APP_IF_DEDICATED_GATEWAY=
+REACT_APP_IPFS_LOCAL_GATEWAY=http://127.0.0.1:9090
+REACT_APP_IPFS_LOCAL_PORT=5002
+# local or infura
+REACT_APP_IPFS_NODE=local
